2005-05-19  Release Manager

	* GCC 3.4.4 released.

2005-05-15  Mark Mitchell  <mark@codesourcery.com>

	* lib/compat.exp (compat-execute): Do not use regsub unsafely.

2005-05-11  Ben Elliston  <bje@au.ibm.com>

	* gcc.dg/debug/pr16676.c: Remove for now.

2005-05-10  Ben Elliston  <bje@au.ibm.com>

	PR debug/16676
	* gcc.dg/debug/pr16676.c: New test.

2005-05-08  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/21427
	* g++.dg/inherit/covariant13.C: New.
	Backport 2005-03-01  Nathan Sidwell  <nathan@codesourcery.com>
	* g++.dg/inherit/covariant12.C: New.

2005-05-04  Mark Mitchell  <mark@codesourcery.com>

	Backport:
	2004-12-21  Mark Mitchell  <mark@codesourcery.com>
	PR c++/19034
	* g++.dg/template/crash30.C: New test.

2005-05-02  Mark Mitchell  <mark@codesourcery.com>

	Backport:
	2005-03-25  Mark Mitchell  <mark@codesourcery.com>
	* lib/g++.exp (g++_link_flags): Use gcc-set-multilib-library-path.
	(g++_init): Make sure that CXXFLAGS is set.
	* lib/gcc-defs.exp (gcc-set-multilib-library-path): New function.
	* lib/objc.exp (objc_init): Likewise.
	2004-11-27  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
	* lib/target-libpath.exp (restore_ld_library_path_env_vars):
	Check existence of ld library path variables before unsetting.
	2004-11-24  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
	* lib/target-libpath.exp (orig_ld_library_path_saved): Add missing set.
	2004-11-23  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
	* lib/target-libpath.exp: New file defining
	set_ld_library_path_env_vars and restore_ld_library_path_env_vars.
	* g++.dg/compat/compat.exp, lib/g++.exp, lib/objc.exp: Use new procs.

2005-05-02  Mark Mitchell  <mark@codesourcery.com>

	PR c++/15875
	* g++.dg/template/ptrmem14.C: New test.

2005-05-01  Mark Mitchell  <mark@codesourcery.com>

	Backport:
	2005-02-22  Mark Mitchell  <mark@codesourcery.com>
	PR c++/19991
	* g++.dg/parse/constant7.C: New test.

2005-05-02  Eric Botcazou  <ebotcazou@libertysurf.fr>
