@@ -1,3 +1,8 @@
+2005-07-22  Bernd Schmidt  <bernd.schmidt@analog.com>
+
+	* gcc.dg/bfin-longcall-1.c: New file.
+	* gcc.dg/bfin-longcall-2.c: New file.
+
 2005-05-19  Release Manager
 
 	* GCC 3.4.4 released.
